lib/piccard/PiUsb.h

// Laser Functions
void * __stdcall piConnectLaser(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectLaser(void * devicePtr);
int __stdcall piSetLaserStates(int LaserStates, void * devicePtr);  // Bit 3 controls laser
int __stdcall piGetLaserStates(int * ReportedStates, void * devicePtr);
// Rotator Functions
void * __stdcall piConnectRotator(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectRotator(void * devicePtr);
int __stdcall piSetRotatorPosition(int Position, void * devicePtr);
int __stdcall piGetRotatorPosition(int * ReportedPosition, void * devicePtr);
// Valve Functions
void * __stdcall piConnectValve(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectValve(void * devicePtr);
int __stdcall piSetValveStates(int ValveStates, void * devicePtr);  // Bit 0 = valve 1, Bit 1 = valve 2
int __stdcall piGetValveStates(int * ReportedStates, void * devicePtr);
int __stdcall piGetValveSensor(int * SensorValue, int SensorNumber, void * devicePtr);	// Sensor number = 0 or 1