src/pi4dusb/bindings/PI4DUSBStageLibrary.java

	/**
	 * Laser Functions<br>
	 * Original signature : <code>void* piConnectLaser(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:95</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectLaser(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectLaser(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectLaser(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectLaser(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:96</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectLaser(Pointer<? > devicePtr) {
		piDisconnectLaser(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectLaser(@Ptr long devicePtr);
	/**
	 * Bit 3 controls laser<br>
	 * Original signature : <code>int piSetLaserStates(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:97</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetLaserStates(int LaserStates, Pointer<? > devicePtr) {
		return piSetLaserStates(LaserStates, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetLaserStates(int LaserStates, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetLaserStates(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:98</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetLaserStates(Pointer<Integer > ReportedStates, Pointer<? > devicePtr) {
		return piGetLaserStates(Pointer.getPeer(ReportedStates), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetLaserStates(@Ptr long ReportedStates, @Ptr long devicePtr);
	/**
	 * Rotator Functions<br>
	 * Original signature : <code>void* piConnectRotator(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:101</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectRotator(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectRotator(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectRotator(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectRotator(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:102</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectRotator(Pointer<? > devicePtr) {
		piDisconnectRotator(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectRotator(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetRotatorPosition(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:103</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetRotatorPosition(int Position, Pointer<? > devicePtr) {
		return piSetRotatorPosition(Position, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetRotatorPosition(int Position, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetRotatorPosition(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:104</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetRotatorPosition(Pointer<Integer > ReportedPosition, Pointer<? > devicePtr) {
		return piGetRotatorPosition(Pointer.getPeer(ReportedPosition), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetRotatorPosition(@Ptr long ReportedPosition, @Ptr long devicePtr);
	/**
	 * Valve Functions<br>
	 * Original signature : <code>void* piConnectValve(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:107</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectValve(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectValve(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectValve(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectValve(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:108</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectValve(Pointer<? > devicePtr) {
		piDisconnectValve(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectValve(@Ptr long devicePtr);
	/**
	 * Bit 0 = valve 1, Bit 1 = valve 2<br>
	 * Original signature : <code>int piSetValveStates(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:109</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetValveStates(int ValveStates, Pointer<? > devicePtr) {
		return piSetValveStates(ValveStates, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetValveStates(int ValveStates, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetValveStates(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:110</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetValveStates(Pointer<Integer > ReportedStates, Pointer<? > devicePtr) {
		return piGetValveStates(Pointer.getPeer(ReportedStates), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetValveStates(@Ptr long ReportedStates, @Ptr long devicePtr);
	/**
	 * Sensor number = 0 or 1<br>
	 * Original signature : <code>int piGetValveSensor(int*, int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:111</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetValveSensor(Pointer<Integer > SensorValue, int SensorNumber, Pointer<? > devicePtr) {
		return piGetValveSensor(Pointer.getPeer(SensorValue), SensorNumber, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetValveSensor(@Ptr long SensorValue, int SensorNumber, @Ptr long devicePtr);
}
